k8s/springboot-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tcs-demo
  labels:
    app: springboot
spec:
  replicas: 2  # scalable deployment
  selector:
    matchLabels:
      app: springboot
  template:
    metadata:
      labels:
        app: springboot
    spec:
      containers:
      - name: tcs-demo
        image: cborkar6159/tcs-demo:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        imagePullPolicy: Always
