k8s/springboot-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tcs-demo--nodeport-service
spec:
  type: NodePort
  selector:
    app: springboot
  ports:
    - port: 80           # Port exposed inside the cluster
      targetPort: 8080   # Port your Spring Boot app listens on
      nodePort: 30080    # External port on each node
