k8s/springboot-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springboot-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: springboot.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: springboot-nodeport-service
            port:
              number: 80
